# utptoserial

unity-udpserial/: unity-udpserial_1.0.bb
unity-udpserial/files/: CMakeLists.txt  udp_serial.cpp
